--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,11 @@
+black==24.2.0
+click==8.1.7
 csvfile==3.4.0
-XlsxWriter==3.2.0
+et-xmlfile==1.1.0
+mypy-extensions==1.0.0
+openpyxl==3.1.2
+packaging==24.0
+pathspec==0.12.1
+platformdirs==4.2.0
+tomli==2.0.1
+typing_extensions==4.10.0
